après sélection d'un tag : recherche principale à nouveau active + possibilité revenir en arrière avec 'suppr' + texte reformaté divCard + correction bug affichage nom ingrédient + correction bug extra space collapse entre ':' 'quantité ingrédient' 'unité ingrédient'

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ clair de text de card : #e7e7e7ff
 
 */
 
+
+
 body {
     min-width: 220px;
 }
@@ -49,6 +51,9 @@ header #logo {
     max-width: 95%;
     max-height: 120px;
     min-width: 40px;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical; 
 }
 
 #searchSection {
@@ -242,7 +247,7 @@ header #logo {
 }
 
 #searchSection__filters .filter .tagSuggestions ul li {
-    white-space: nowrap;
+    /* white-space: normal; */
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 0.7rem;
@@ -334,6 +339,11 @@ header #logo {
 .recipesSection__card__texteFictif__body p {
     margin: 0;
     text-overflow: ellipsis;
+}
+
+.recipesSection__card__texteFictif__body p.quantiteIngredient {
+    margin-left: 0.2rem;
+    margin-right: 0.05rem;
 }
 
 .recipesSection__card__notice {
